# Genesis-

./: .gitignore  Cargo.toml  HANDOFF.md  PARITY_GAPS.md  README.md  build.rs
docs/: ROADMAP.md
gcompose/: Cargo.toml  build.rs
gcompose/csrc/: fpx_aread.c  fpx_audio.c  fpx_decode.c  fpx_encode.c  fpx_gpu.c
gcompose/src/: ffi.rs  main.rs
src/: ffi.rs  main.rs
ui/: Cargo.toml
ui/assets/: icons_dark_32.rgba  icons_index.txt  swap_rb.cube
ui/src/: app.rs  icons.rs  main.rs  model.rs  panels.rs  pool.rs  project_io.rs  theme.rs  thumbs.rs  timeline.rs  worker.rs
