[package]
name = "genesis"
version = "0.1.0"
edition = "2021"
description = "Genesis NLE — egui front-end. Links no engine/OpenCL; spawns the gcompose worker for frames."

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ab_glyph = "0.2" # P5 text/titles: glyph rasterization for the title overlay (already in the tree via egui)
